Refactored PersonnelTableMouseAdapter.java
Corrected the mistaken usage of CMD_COMPLETE_STAGE with the correct CMD_DROP_OUT as action command for dropping out students.